Fix: unclear text on navigation

--- a/UI/index.html
+++ b/UI/index.html
@@ -23,7 +23,7 @@
           </div>
           <ul class="flex height-0" id="navigation">
             <li><a href="/">Home</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="pages/about/">About</a></li>
             <li><a href="#">Portfolio</a></li>
             <li><a href="#">Blog</a></li>
             <li><a href="#">Contact</a></li>
@@ -36,9 +36,9 @@
       </nav>
     </header>
     <main>
-      <div class="wrapper">
-        <section id="hero" class="flex">
-          <div id="" class="flex-1">
+      <section id="hero" class="flex">
+        <div class="wrapper flex">
+          <div class="flex-1">
             <h1 class="text-5">Passionate, educative developer</h1>
             <p>Every code is written for reason</p>
             <div>
@@ -58,8 +58,10 @@
               </div>
             </div>
           </div>
-        </section>
-        <section id="headline" class="flex">
+        </div>
+      </section>
+      <section id="headline" class="flex">
+        <div class="wrapper headline flex">
           <div class="headline-picture-container" class="">
             <img
               src="assets/images/sostene.jpg"
@@ -77,11 +79,13 @@
               distinctio, illo obcaecati commodi at quasi ex totam rerum!
             </p>
             <div>
-              <button class="button">Hire me</button>
+              <button class="button-primary">Hire me</button>
             </div>
           </div>
-        </section>
-        <section id="ftproject">
+        </div>
+      </section>
+      <section id="ftproject">
+        <div class="wrapper">
           <h2 class="text-center heading">Featured posts</h2>
           <div class="flex flex-row horizontal-scroll">
             <div class="card">
@@ -108,8 +112,10 @@
               </div>
             </div>
           </div>
-        </section>
-        <section id="ftpost">
+        </div>
+      </section>
+      <section id="ftpost">
+        <div class="wrapper">
           <h1 class="text-center">Featured posts</h1>
           <div class="flex flex-row horizontal-scroll">
             <div class="card">
@@ -233,17 +239,17 @@
               </div>
             </div>
           </div>
-        </section>
+        </div>
+      </section>
 
-        <footer>
-          <ul class="social-media-links">
-            <li>Linkedin</li>
-            <li>Twitter</li>
-            <li>Github</li>
-          </ul>
-          <h5 class="text-center">Copyright &copy; Munezero Bagira Sostene</h5>
-        </footer>
-      </div>
+      <footer>
+        <ul class="social-media-links">
+          <li><a href="https://www.linkedin.com">Linkedin</a></li>
+          <li><a href="https://www.twitter.com">Twitter</a></li>
+          <li><a href="https://www.github.com">Github</a></li>
+        </ul>
+        <h5 class="text-center">Copyright &copy; Munezero Bagira Sostene</h5>
+      </footer>
     </main>
     <script src="assets/javascript/main.js"></script>
   </body>
