Add: some real data

--- a/UI/index.html
+++ b/UI/index.html
@@ -100,7 +100,7 @@
           <div class="flex flex-row horizontal-scroll">
             <div class="card">
               <div class="card-image">
-                <img src="assets/images/blogr.png" alt="Typing speed" />
+                <img src="assets/images/huddle-single.png" alt="Typing speed" />
               </div>
               <div class="text-container">
                 <h4>Huddle</h4>
@@ -109,7 +109,96 @@
                   css.
                 </p>
                 <div class="tags">
-                  <span>General</span><span>javascript</span><span>OSINT</span>
+                  <span>CSS</span><span>Javascript</span><span>HTML</span>
+                </div>
+                <div class="button-group flex">
+                  <button class="button-primary">
+                    <a href="https://huddle-sinngle.vercel.app/">Visit site</a>
+                  </button>
+                  <button class="button-primary-inverse">
+                    <a href="https://github.com/munezerobagira/huddle-sinngle"
+                      >source code</a
+                    >
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-image">
+                <img src="assets/images/foylo.png" alt="Typing speed" />
+              </div>
+              <div class="text-container">
+                <h4>Fylo Basic</h4>
+                <p>
+                  A landing page for SaaS app made using javascript, html and
+                  css.
+                </p>
+                <div class="tags">
+                  <span>Vue</span><span>javascript</span><span>CSS</span
+                  ><span> HTML</span>
+                </div>
+                <div class="button-group flex">
+                  <button class="button-primary">Visit site</button>
+                  <button class="button-primary-inverse">source code</button>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-image">
+                <img src="assets/images/huddle-basic.png" alt="Typing speed" />
+              </div>
+              <div class="text-container">
+                <h4>Huddle Basic</h4>
+                <p>
+                  A landing page for SaaS app made using javascript, html and
+                  css.
+                </p>
+                <div class="tags">
+                  <span>Vue</span><span>javascript</span><span>CSS</span
+                  ><span> HTML</span>
+                </div>
+                <div class="button-group flex">
+                  <button class="button-primary">
+                    <a href="http://huddle-basic.vercel.app/">Visit site</a>
+                  </button>
+                  <button class="button-primary-inverse">
+                    <a href="https://github.com/munezerobagira/huddle-basic"
+                      >source code</a
+                    >
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-image">
+                <img src="assets/images/random-quote.png" alt="Typing speed" />
+              </div>
+              <div class="text-container">
+                <h4>Random quote</h4>
+                <p>
+                  A landing page for SaaS app made using javascript, html and
+                  css.
+                </p>
+                <div class="tags">
+                  <span>React</span><span>javascript</span><span>CSS</span
+                  ><span> HTML</span>
+                </div>
+                <div class="button-group flex">
+                  <button class="button-primary">Visit site</button>
+                  <button class="button-primary-inverse">source code</button>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-image">
+                <img src="assets/images/scissors-game.png" alt="Typing speed" />
+              </div>
+              <div class="text-container">
+                <h4>Scissors game</h4>
+                <p>Simple game with its rules. Just visit it and play</p>
+                <div class="tags">
+                  <span>React</span><span>javascript</span><span>CSS</span
+                  ><span> HTML</span>
                 </div>
                 <div class="button-group flex">
                   <button class="button-primary">Visit site</button>
@@ -139,16 +228,83 @@
               <div class="text-container">
                 <h4>How to reach 74 WPM in 10 months from 30 WPM</h4>
                 <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Ipsam autem earum maxime sequi quas placeat exercitationem
-                  numquam beatae, saepe quasi enim, ad iure eius accusantium
-                  odit dicta nihil dolores ut.
+                  Reaching your full typing potential can be hard but possible
                 </p>
                 <div class="tags">
-                  <span>General</span><span>javascript</span><span>OSINT</span>
+                  <span>Productivity</span><span>General</span
+                  ><span> skills</span>
                 </div>
-                <div class="button-group">
-                  <button class="button-primary">Read more</button>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-image">
+                <img src="assets/images/CTF.jpg" alt="Typing speed" />
+              </div>
+              <div class="text-container">
+                <h4>How to survive your first CTF compention</h4>
+                <p>
+                  Capture the flag is a traditional outdoor sport where two or
+                  more teams each have a flag and the objective is to capture
+                  the other team's flag, located at the team's "base", and bring
+                  it safely back to their own base
+                </p>
+                <div class="tags">
+                  <span>Cybersecurity</span><span>coding</span
+                  ><span>programming</span>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-image">
+                <img src="assets/images/next.jpg" alt="Typing speed" />
+              </div>
+              <div class="text-container">
+                <h4>How to setup the environment variables in nextJS</h4>
+                <p>
+                  Next.js gives you the best developer experience with all the
+                  features you need for production: hybrid static & server
+                  rendering, TypeScript support, smart bundling, route
+                  pre-fetching, and more. No config needed.
+                </p>
+                <div class="tags">
+                  <span>Cybersecurity</span><span>coding</span
+                  ><span>programming</span>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-image">
+                <img src="assets/images/react.jpg" alt="Typing speed" />
+              </div>
+              <div class="text-container">
+                <h4>Getting started with react component cycle and hooks</h4>
+                <p>
+                  React makes it painless to create interactive UIs. Design
+                  simple views for each state in your application, and React
+                  will efficiently update and render just the right components
+                  when your data changes.
+                </p>
+                <div class="tags">
+                  <span>Cybersecurity</span><span>coding</span
+                  ><span>programming</span>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-image">
+                <img src="assets/images/graphql.png" alt="Typing speed" />
+              </div>
+              <div class="text-container">
+                <h4>Do you really need use graphql?</h4>
+                <p>
+                  GraphQL is an open-source data query and manipulation language
+                  for APIs, and a runtime for fulfilling queries with existing
+                  data. GraphQL was developed internally by Facebook in 2012
+                  before being publicly released in 2015
+                </p>
+                <div class="tags">
+                  <span>Cybersecurity</span><span>coding</span
+                  ><span>programming</span>
                 </div>
               </div>
             </div>
