ADD: fonts-variant

--- a/UI/index.html
+++ b/UI/index.html
@@ -44,7 +44,7 @@
       <section id="hero" class="flex">
         <div class="wrapper flex">
           <div class="flex-1 margin-nav">
-            <h1 class="text-5">Passionate, educative developer</h1>
+            <h1 class="text-5">Learner, critical thinker</h1>
             <p>Every code is written for reason</p>
             <div>
               <button class="button-primary">Hire me</button>
@@ -78,10 +78,10 @@
           <div class="flex-1 headline-text-container">
             <h2>About me</h2>
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam
-              tempore earum odio assumenda dolores officia voluptates
-              perspiciatis necessitatibus architecto nesciunt, perferendis
-              distinctio, illo obcaecati commodi at quasi ex totam rerum!
+              BE student, Freecodecamp certified, 3 years of learning in
+              Software Development, understanding of HTML, CSS3, JSON, React,
+              Vue, Database, and SQL queries and Capable of Performance Testing,
+              Security testing, Documentation, and Deployment on live site.
             </p>
             <div>
               <button class="button-primary">
