Ft: added admin pages

--- a/UI/pages/signup/index.html
+++ b/UI/pages/signup/index.html
@@ -27,12 +27,11 @@
             <li><a href="/">Home</a></li>
             <li><a href="../about/">About</a></li>
             <li><a href="../work/">Work</a></li>
-            <li><a href="../skills/">Skills</a></li>
             <li><a href="../blog/">Blog</a></li>
             <li><a href="../contactme/">Contact</a></li>
             <li>
               <button class="button-primary">
-                <a href="../signup/">signup</a>
+                <a href="../login/">Login</a>
               </button>
             </li>
           </ul>
