--- a/UI/pages/admin/index.html
+++ b/UI/pages/admin/index.html
@@ -34,14 +34,14 @@
       <div class="flex wrapper">
         <aside id="sidebar">
          
-          <div id="sidebar-wrapper" class="flex">
+          <div id="sidebar-wrapper" class="flex active">
             <div id="sidebar-toggler">
               <i class="fa-solid fa-bars"></i>
             </div>
             <div class="info">
               Welcome,<h3 class="color-primary">Sostene</h3>
             </div>
-            <ul id="sidebar-menu">
+            <ul id="sidebar-menu ">
               <li class="menu-list-item">
                 Posts
                 <ol class="dropdown">
@@ -67,7 +67,7 @@
           <div>
             <a class="silent">admin</a>> <a href="./" class="silent">dashboard</a> 
           </div>
-          <div class="flex flex-wrap">
+          <div class="flex flex-wrap flex-between">
             <div class="card px-2">
               <h4><span class="color-primary">40</span> posts</h4>
               <p><div class="tags"> <span>4</span> new</div></p>
