ft: add admin responsiveness

--- a/UI/pages/admin/index.html
+++ b/UI/pages/admin/index.html
@@ -63,7 +63,7 @@
             </ul>
           </div>
         </aside>
-        <section class="admin-content">
+        <section id="admin-content">
           <div>
             <a class="silent">admin</a>> <a href="./" class="silent">dashboard</a> 
           </div>
