--- a/UI/pages/admin/projects/index.html
+++ b/UI/pages/admin/projects/index.html
@@ -34,7 +34,10 @@
     <main class="margin-nav">
       <div class="flex wrapper">
         <aside id="sidebar">
-          <div id="sidebar-wrapper" class="flex">
+          <div id="sidebar-wrapper" class="flex active">
+            <div id="sidebar-toggler">
+              <i class="fa-solid fa-bars"></i>
+            </div>
             <div class="info">
               Continue,
               <h3 class="color-primary">Sostene</h3>
@@ -63,7 +66,7 @@
             </ul>
           </div>
         </aside>
-        <section class="admin-content">
+        <section id="admin-content">
           <div>
             <a class="silent">admin</a>>
             <a href="../" class="silent">dashboard</a> >
