--- a/UI/pages/admin/enquires/index.html
+++ b/UI/pages/admin/enquires/index.html
@@ -22,9 +22,6 @@
           <div id="logo">
             <h1><a href="/">Sostene</a></h1>
           </div>
-          <ul class="flex height-0" id="navigation">
-            <li></li>
-          </ul>
           <button class="button-primary">
             <a href="">Logout</a>
           </button>
@@ -34,38 +31,43 @@
     <main class="margin-nav">
       <div class="flex wrapper">
         <aside id="sidebar">
-          <div id="sidebar-wrapper" class="flex">
+          <div id="sidebar-wrapper" class="flex active">
+            <div id="sidebar-toggler">
+              <i class="fa-solid fa-bars"></i>
+            </div>
             <div class="info">
               Continue,
               <h3 class="color-primary">Sostene</h3>
             </div>
             <ul id="sidebar-menu">
-                <li class="menu-list-item">
-                  Posts
-                  <ol class="dropdown">
-                    
-                    <li><a class="silent" href="../posts/form">Add post</a></li>
-                    <li><a class="silent" href="../posts/">Edit posts</a></li>
-                  </ol>
-                </li>
-                <li class="menu-list-item">Projects
-                  <ol class="dropdown">
-                    <li><a class="silent" href="../projects/form">Add project</a></li>
-                    <li><a class="silent" href="../projects/">Edit project</a></li>
-                  </ol>
-                </li>
-                <li class="menu-list-item"> 
-                      <a class="silent" href="../personal/">Edit personal info</a>
-      
-                    </li>            
-                  </ol>            
-                  </ol>
-                </li>
-                <li class="menu-list-item"><a href="./" class="silent">Personal enquiries </a></li>
-              </ul>
+              <li class="menu-list-item">
+                Posts
+                <ol class="dropdown">
+                  <li><a class="silent" href="../posts/form">Add post</a></li>
+                  <li><a class="silent" href="../posts/">Edit posts</a></li>
+                </ol>
+              </li>
+              <li class="menu-list-item">
+                Projects
+                <ol class="dropdown">
+                  <li>
+                    <a class="silent" href="../projects/form">Add project</a>
+                  </li>
+                  <li>
+                    <a class="silent" href="../projects/">Edit project</a>
+                  </li>
+                </ol>
+              </li>
+              <li class="menu-list-item">
+                <a class="silent" href="../personal/">Edit personal info</a>
+              </li>
+              <li class="menu-list-item">
+                <a href="./" class="silent">Personal enquiries </a>
+              </li>
+            </ul>
           </div>
         </aside>
-        <section class="admin-content">
+        <section id="admin-content">
           <div>
             <a class="silent">admin</a>>
             <a href="../" class="silent">dashboard</a> >
@@ -85,7 +87,6 @@
                   <div class="flex comment-body" level="1">
                     <div class="flex comment-body-header">
                       <div class="user flex">
-                        <i class="avatar">A</i>
                         <h5 class="name">pacsimon</h5>
                         <small>1 week ago</small>
                       </div>
@@ -106,7 +107,6 @@
                   <div class="flex comment-body" level="1">
                     <div class="flex comment-body-header">
                       <div class="user flex">
-                        <i class="avatar">A</i>
                         <h5 class="name">pacsimon</h5>
                         <small class="date">1 week ago</small>
                       </div>
