--- a/UI/pages/admin/personal/index.html
+++ b/UI/pages/admin/personal/index.html
@@ -34,7 +34,10 @@
     <main class="margin-nav">
       <div class="flex wrapper">
         <aside id="sidebar">
-          <div id="sidebar-wrapper" class="flex">
+          <div id="sidebar-wrapper" class="flex active">
+            <div id="sidebar-toggler">
+              <i class="fa-solid fa-bars"></i>
+            </div>
             <div class="info">
               Continue,
               <h3 class="color-primary">Sostene</h3>
@@ -67,12 +70,11 @@
             </ul>
           </div>
         </aside>
-        <section class="admin-content">
+        <section id="admin-content">
           <div>
             <a class="silent">admin</a>>
-            <a href="../../" class="silent">dashboard</a> >
-            <a href="../" class="silent">posts</a> >
-            <a href="./" class="silent">form</a>
+            <a href="../" class="silent">dashboard</a> >
+            <a href="./" class="silent">personal</a>
           </div>
           <div>
             <h1>Edit personal information</h1>
@@ -130,6 +132,6 @@
         </section>
       </div>
     </main>
-    <script src="../../assets/javascript/main.js"></script>
+    <script src="../../../assets/javascript/main.js"></script>
   </body>
 </html>
