--- a/UI/pages/admin/enquires/index.html
+++ b/UI/pages/admin/enquires/index.html
@@ -23,7 +23,7 @@
             <h1><a href="/">Sostene</a></h1>
           </div>
           <button class="button-primary">
-            <a href="">Logout</a>
+            <a href="/pages/login">Logout</a>
           </button>
         </div>
       </nav>
