--- a/UI/pages/admin/index.html
+++ b/UI/pages/admin/index.html
@@ -25,7 +25,7 @@
           <ul class="flex height-0" id="navigation">
           </ul>
           <button class="button-primary">
-            <a href="">Logout</a>
+            <a href="/pages/login">Logout</a>
           </button>
         </div>
       </nav>
